--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     background-image: url("images/comet2.jpg");
-    background-position: left top;
+    background-position: center;
+    background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-color: #202020;    
